--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_bloc: ^8.1.5
+  get_it: ^7.7.0
   cupertino_icons: ^1.0.2
   fpdart: ^1.1.0
   supabase_flutter: ^2.5.2
