--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
-  get_it: ^7.7.0
+  get_it: ^7.6.7
   cupertino_icons: ^1.0.2
   fpdart: ^1.1.0
   supabase_flutter: ^2.5.2
+  dotted_border: ^2.1.0
+  smooth_page_indicator: ^1.0.0
 
 dev_dependencies:
   flutter_test:
