feat: upload blog implemented in supabase as well as in domain/data/presentation layers

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   supabase_flutter: ^2.5.2
   dotted_border: ^2.1.0
   smooth_page_indicator: ^1.0.0
+  image_picker: ^1.1.1
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
