--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0
   image_picker: ^1.1.1
   uuid: ^4.4.0
+  lordicon: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -26,3 +27,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/doc.json
