--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,11 @@ dependencies:
   image_picker: ^1.1.1
   uuid: ^4.4.0
   lordicon: ^1.0.3
+  intl: ^0.19.0
+  internet_connection_checker_plus: ^2.3.0
+  hive: ^4.0.0-dev.2
+  isar_flutter_libs: ^4.0.0-dev.13
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
