--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   hive: ^4.0.0-dev.2
   isar_flutter_libs: ^4.0.0-dev.13
   path_provider: ^2.1.0
+  shared_preferences: ^2.2.3 
 
 dev_dependencies:
   flutter_test:
