feat: delete Blog added, user based deletion,

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   isar_flutter_libs: ^4.0.0-dev.13
   path_provider: ^2.1.0
   shared_preferences: ^2.2.3 
+  universal_io: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -36,3 +37,4 @@ flutter:
 
   assets:
     - assets/doc.json
+    - assets/images/
